improved video info panels by adding game names, bookmark counts, thumbnails, and upload links; refactored video metadata handling a bit